--- a/_site.yml
+++ b/_site.yml
@@ -41,7 +41,9 @@ navbar:
     - text: Visualising data
       href: visualising-data.html
     - text: Manipulating data
-      href: manipulating-data.html      
+      href: manipulating-data.html 
+    - text: Text data
+      href: working-with-text.html       
   - text: Stats
     menu:
     - text: Probability distributions
